# tool_axe

./: .travis.yaml  .travis.yml  AXE.cpp  AXE.h  AccessSecondIterator.h  BitManip.h  BootSequence.cpp  BootSequence.h  CMakeLists.txt  CRC.h  ChanEndpoint.cpp  ChanEndpoint.h  Chanend.cpp  Chanend.h  ClockBlock.cpp  ClockBlock.h  Config.h  ConfigSchema.rng  Core.cpp  Core.h  DecodeCache.cpp  DecodeCache.h  EthernetPhy.cpp  EthernetPhy.h  Exceptions.cpp  Exceptions.h  INTERNALS.rst  Instruction.cpp  Instruction.h  InstructionBitcode.cpp  InstructionBitcode.h  InstructionDefinitions.cpp  InstructionDefinitions.h  InstructionGen.cpp  InstructionHelpers.cpp  InstructionHelpers.h  InstructionMacrosCommon.h  InstructionProperties.cpp  InstructionProperties.h  JIT.cpp  (+100 more)
benchmarks/: dhry_1.c  dhry_main.xc  ports.xc  run.pl
cmake/Modules/: FindClang.cmake  FindLLVM.cmake  FindLibElf.cmake  FindLibRt.cmake  FindSDL.cmake  FindSDL2.cmake
include/axe-c/: axe.h
lib/: AXE.cpp  AXEInitialize.cpp  AXEInitialize.h  AXEVersion.h.in  AccessSecondIterator.h  Array.h  BitManip.h  BootSequence.cpp  BootSequence.h  BootSequencer.cpp  BootSequencer.h  BreakpointManager.cpp  BreakpointManager.h  CMakeLists.txt  ChanEndpoint.cpp  ChanEndpoint.h  Chanend.cpp  Chanend.h  CheckPacketOvertakeTracer.cpp  CheckPacketOvertakeTracer.h  ClockBlock.cpp  ClockBlock.h  Compiler.h  Config.h  Config.h.in  ConfigSchema.rng  Core.cpp  Core.h  DecodeCache.cpp  DecodeCache.h  DelegatingTracer.cpp  DelegatingTracer.h  Endianness.h  EthernetPhy.cpp  EthernetPhy.h  Exceptions.cpp  InstFunction.h  Instruction.cpp  Instruction.h  InstructionBitcode.cpp  (+136 more)
test/: basic.c  elf_entry_point.S  fibonacci.c  fibonacci.c.expect  helloworld.c  lit.cfg  lit.site.cfg.in  multicore_g4.xc  multicore_l2.xc
test/Exceptions/: arithmetic.S  ecall.S  illegal_resource.S  kcall.S  trap_info.S  trap_info.S.expect
test/Instructions/: BLA.S  BLACP.S  BLAT.S  GETSR.S  LDAPB.c  LDAPF.c  arithmetic.c  memory.S  xor4.c  zip.c
test/Interrupts/: interrupt.S  kernel.S
test/Options/: max_cycles.xc  multi_loopback.xc  port_arguments.xc  warn_packet_overtake.xc
test/Peripherals/: uart.xc
test/Resources/: paused_on.xc
test/Resources/Chanends/: basic.S  not_in_use_junk.S  ownership.S  pause.S
test/Resources/ClockBlocks/: port_source.xc  port_source2.xc  port_source3.xc  port_source4.xc  port_source5.xc
test/Resources/Ports/: buffered.xc  buffered2.xc  buffered_conditional.xc  buffered_timed_conditional.xc  endin.xc  events.xc  handshaken.xc  hold_event_value.S  ignored_output.xc  multicore.xc  multicore.xc.xn  outclock.xc  partial_input.xc  partial_input_timed.xc  partial_output.xc  peek.xc  port_counter.xc  port_counter2.xc  port_counter3.xc  readyIn.xc  readyOut.xc  readyOut2.xc  readyOut3.xc  ready_out_sample_delay.xc  set_port_inv.xc  setpsc.xc  setpsc_output.xc  timed.xc  timed2.xc  timed_direction_change.xc  timestamp.xc  timing.xc  timing2.xc  uart.xc  uart2.xc
test/Resources/Threads/: unsynchronised.S
test/SelfModiyingCode/: basic.S
test/SystemCalls/: argv.S  argv_xs2.c  files.c  io.c  is_simulation.S  overlays.xc
test/Targets/: multicore_2g4.xc  multicore_2g4.xc.xn  multicore_g4.xc  multicore_l2.xc  multicore_line.xc  multicore_line.xc.xn  u_series.xc  u_series.xc.xn
test_common/: exception_expect.S
tools/axe/: CMakeLists.txt  Options.cpp  Options.h  main.cpp
utils/genHex/: CMakeLists.txt  genHex.c
utils/genJitGlobalMap/: CMakeLists.txt  genJitGlobalMap.cpp
utils/instgen/: CMakeLists.txt  InstructionGen.cpp
utils/not/: CMakeLists.txt  not.cpp
